# pgql

./: .gitignore  .travis.yml  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  init.sh
.github/workflows/: test.yml
src/: main.rs
tests/: data.sql  empty.query.expected.json  introspection.test.expected.graphql  request.jq  run.sh  schema.sql  t1.query.expected.json  t1.query.test.gql  unknown-field.query.expected.json  unknown-field.query.test.gql
